-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

10/11/14
    - Added 'fmincon_ip', 'linprog_ds' and 'optimoptions' to
      have_fcn() to test for availability of fmincon's interior
      point method (Optimization Toolbox 4.x +), linprog's
      dual simplex method (Optimization Toolbox 7.1 +), and
      optimoptions function for setting Optimization Toolbox
      options (Optimization Toolbox 6.3 +), respectively.
    - Added handling of NaN values to t_is().
    - INCOMPATIBLE CHANGE: Removed use of 'ot_opts' field and
      replaced with 'linprog_opts' and 'quadprog_opts' fields
      in the OPT argument to qps_matpower() and qps_ot().
    - Added optional 'linprog' and 'quadprog' fields to MATPOWER
      options struct, to allow setting of their options directly
      from mpoption(). Incremented MATPOWER options struct version
      to 2.
    - Added tests for multiple linprog() algorithms to t_opf_dc_ot().

10/10/14
    - Added 'sqp' algorithm option for fmincon.alg, not suitable
      for large problems.

10/7/14
    - Added toggle_softlims(), an extension to implement DC OPF
      branch flow soft limits. This should be useful in identifying
      the cause of infeasibility in some infeasible DC OPF problems.
      See 'help toggle_softlims' for details.

9/24/14
    - Fixed issue with failed tests in t_psse() on Windoze.

8/11/14
    - Modified savecase() to save fields bus_name and genfuel
      (both cell arrays of strings) if present. This is an
      experimental feature and the design may change in future
      versions.
    - Optionally return success flag from t_ok() and t_is().

8/4/14
    - Additional improvements to correctly handling PSS/E RAW