@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.0b1
 -------------------
 
+10/16/14
+    - Reactive power output of multiple generators at a PQ bus
+      no longer get re-allocated when running a power flow.
+
 10/11/14
     - Added 'fmincon_ip', 'linprog_ds' and 'optimoptions' to
       have_fcn() to test for availability of fmincon's interior
